# queue-app-core

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: .gitlab-ci.yml  docs.yml  static.yml
docs/source/: conf.py  dbs.rst  index.rst  modules.rst  queue.rst  queue_app_core.dbs.rst  queue_app_core.rst  services.rst
src/mlappcore/dbs/: object_dbs.py
src/mlappcore/queue/: rabbit_publishers_consumers.py  seaweed_publishers_consumers.py
src/mlappcore/services/: base_service.py  handlers.py  routers.py
src/mlappcore/web/: class_base_view.py
src/queue_app_core/dbs/: object_dbs.py
src/queue_app_core/queue/: rabbit_publishers_consumers.py  seaweed_publishers_consumers.py
src/queue_app_core/services/: base_service.py  handlers.py  routers.py
