[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlappcore"
version = "1.0.0dev1"
description = "Template for ML web app"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "h128bit"}
]
urls = {Homepage = "http://gitlab.fgau.local/t.asmus/mlappcore.git"}
keywords = ["fastapi", "web", "ml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "fastapi-utils",
    "httpx",
    "nest_asyncio",
    "yarl",
    "requests",
    "peewee"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*", "tests*"]