[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlappcore"
version = "1.0.5"
description = "Template for ML web app"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "h128bit"}
]
urls = {Homepage = "http://gitlab.fgau.local/t.asmus/mlappcore.git"}
keywords = ["ml", "rabbitmq"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "uuid",
    "python-dotenv",
    "pika",
    "yarl",
    "requests",
    "tenacity"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*", "tests*"]